# wireless-link-intelligence-system

./: .env.example  .gitignore  AGENTS.md  Dockerfile  JETSON_BENCHMARK_GUIDE.md  Makefile  PORTFOLIO_DELIVERABLES.md  README.md  TECH_BRIEF.md  build_dashboard.py  channel.ipynb  channel.py  export_onnx.py  generate_dataset.py  main.ipynb  plots.ipynb  plots.py  pyproject.toml  qpsk_modem.ipynb  qpsk_modem.py  requirements.txt  run_channel_estimation_comparison.py  run_sim.py  run_sim_ensemble.py  run_sim_ofdm.py  run_sim_tdl.py  train_link_models.py  train_snr_torch.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
ai_link_estimation/: __init__.py  dataset.py  features.py  models.py  onnx_export.py  snr_torch.py
edge/: jetson_benchmark_template.py
notebooks/legacy/: plots_exploration.ipynb  qpsk_link_main.ipynb  qpsk_modem_exploration.ipynb
qpsk_link/: __init__.py  channel_estimation.py  modem.py  ofdm.py  tdl_channel.py
reports/: ber_full_awgn.csv  ber_full_ofdm_awgn.csv  ber_full_rayleigh.csv  ber_smoke_awgn.csv  ber_smoke_rayleigh.csv  bler_full_tdl_ofdm.csv  channel_estimation_comparison.csv  dashboard.html  edge_inference_plan.md  link_estimation_metrics.json  link_estimation_report.md  snr_quantization_comparison.json
tests/: test_channel_estimation.py  test_features.py  test_modem.py  test_ofdm.py  test_snr_torch.py  test_tdl_channel.py
