[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wireless-link-intelligence-system"
version = "0.1.0"
description = "Wireless Link Intelligence System. Production-discipline reference for physical-layer AI: classical QPSK baseband simulator with deterministic BER sweeps, ML link estimators on a stratified holdout, ONNX export, and a Jetson benchmark template."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0"]
ml = ["torch>=2.2"]
edge = ["skl2onnx", "onnx", "onnxruntime"]
dev = ["pytest>=7.0", "ruff"]

[project.scripts]
run-sim = "run_sim:main"

[tool.setuptools]
py-modules = [
    "export_onnx",
    "generate_dataset",
    "run_sim",
    "run_sim_ensemble",
    "train_link_models",
]

[tool.setuptools.packages.find]
include = ["ai_link_estimation*", "qpsk_link*"]
exclude = ["reports*", "tests*", "edge*", "notebooks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["."]
exclude = ["notebooks/legacy/**", ".venv/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]
"notebooks/legacy/*.ipynb" = ["E402", "F401", "F811", "F821", "F841", "I001", "B007"]
